<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_gravity="center"
    	android:paddingLeft="20dip"
    	android:paddingRight="20dip" >
    	<TextView
    		android:text="@string/main_title"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:layout_gravity="center"
    		android:layout_marginBottom="20dip"
    		android:textSize="22.0sp" />
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:stretchColumns="*">
			<TableRow>
				<Button
				    android:id="@+id/accelerometer_button_id"
				    android:text="@string/accelerometer_button_name"
				    />
			</TableRow>
<!--
			<TableRow>
				<Button
				    android:id="@+id/gyroscope_button_id"
				    android:text="@string/gyroscope_button_name"
				    />
			</TableRow>
-->
			<TableRow>
				<Button
				    android:id="@+id/light_button_id"
				    android:text="@string/light_button_name"
				    />
			</TableRow>
			<TableRow>
				<Button
				    android:id="@+id/magnetic_button_id"
				    android:text="@string/magnetic_button_name"
				    />
			</TableRow>
			<TableRow>
				<Button
				    android:id="@+id/orientation_button_id"
				    android:text="@string/orientation_button_name"
				    />
			</TableRow>
			<TableRow>
				<Button
				    android:id="@+id/pressure_button_id"
				    android:text="@string/pressure_button_name"
				    />
			</TableRow>
			<TableRow>
				<Button
				    android:id="@+id/proximity_button_id"
				    android:text="@string/proximity_button_name"
				    />
			</TableRow>
			<TableRow>
				<Button
				    android:id="@+id/temperature_button_id"
				    android:text="@string/temperature_button_name"
				    />
			</TableRow>
		</TableLayout>
s	</LinearLayout>
</LinearLayout>
